# pierogi

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
grammar/: pierogi.g4
include/: context.hpp  error_reporter.hpp  errors.hpp  lexer.hpp  parser.hpp  source_reader.hpp  types.hpp
include/antlr4-generated/: pierogi.interp  pierogiBaseVisitor.cpp  pierogiBaseVisitor.h  pierogiLexer.cpp  pierogiLexer.h  pierogiLexer.interp  pierogiLexer.tokens  pierogiParser.cpp  pierogiParser.h  pierogiVisitor.cpp
include/antlr4-runtime/: pierogi.interp  pierogiLexer.cpp  pierogiLexer.h  pierogiLexer.interp  pierogiLexer.tokens  pierogiParser.cpp  pierogiParser.h  pierogiVisitor.h
pstl/: main.pstl  pstl.py  pstl_tests.py
src/: context.cpp  errors.cpp  lexer.cpp  parser.cpp  source_reader.cpp
test/: lexer_tests.cpp  parser_tests.cpp  source_reader_tests.cpp  test_main.cpp
test/prgi/: all_tokens.prgi
